<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Nomad Navigation</string>

    <string name="origin">Origin : </string>
    <string name="destination">Destination : </string>
    <string name="navigate">Navigate Me</string>

    <string name="destinationMapSelectionContentDescription">Selection icon, indicates user wishes to select their destination via the map.</string>
    <string name="originMapSelectionContentDescription">Selection icon, indicates user wishes to select their origin via the map.</string>
</resources>
